[package]
name = "changement"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
env_logger = "0.11.8"
names = "0.14.0"

[dev-dependencies]
tempfile = "3.20.0"
